--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
@@ -1,7 +1,7 @@
 <kt-portlet>
 	<kt-portlet-body>
-		<div class="row justify-content-around">
-			<div class="col-6">
+		<div class="row justify-content-around min-60">
+			<div class="col-6 align-self-center">
 				<form action="" [formGroup]="userBasicForm">
 					<div class="row kt-padding-t-15">
 						<div class="col-4 align-self-center">
