--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
@@ -1,4 +1,4 @@
-<nav ngbNav #nav="ngbNav" class="nav-tabs">
+<nav ngbNav #nav="ngbNav" class="nav-tabs m-0" [ngStyle]="{'border':'0'}">
     <ng-container ngbNavItem>
         <a ngbNavLink class="tab-link">
             <div>
@@ -78,4 +78,4 @@
     </ng-container>
 </nav>
 
-<div [ngbNavOutlet]="nav" class="mt-2"></div>
+<div [ngbNavOutlet]="nav" [ngStyle]="{'width':'99%','margin':'auto'}"></div>
