kyc address UI start

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
@@ -21,8 +21,8 @@
                 <div class="step-number">
                     2
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Address & Identity</p>
+                <p class="step-details"> User's Address & Identity</p>
             </div>
         </a>
 
@@ -37,13 +37,13 @@
                 <div class="step-number">
                     3
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Personal Details</p>
+                <p class="step-details"> User's Personal Details</p>
             </div>
         </a>
 
         <ng-template ngbNavContent>
-           <kt-user-personal></kt-user-personal>
+            <kt-user-personal></kt-user-personal>
         </ng-template>
     </ng-container>
 
@@ -53,27 +53,27 @@
                 <div class="step-number">
                     4
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Bank Details</p>
+                <p class="step-details"> User's Bank Details</p>
             </div>
         </a>
 
         <ng-template ngbNavContent>
-           <kt-user-banks></kt-user-banks>
+            <kt-user-banks></kt-user-banks>
         </ng-template>
     </ng-container>
-     <ng-container ngbNavItem>
+    <ng-container ngbNavItem>
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
                     5
                 </div>
-                <p class="step-name">Basic Details</p>
-                <p class="step-details"> User's Basic Details</p>
+                <p class="step-name">Review & Submit</p>
+                <p class="step-details"> User's Review & Submit</p>
             </div>
         </a>
         <ng-template ngbNavContent>
-           <kt-user-review></kt-user-review>
+            <kt-user-review></kt-user-review>
         </ng-template>
     </ng-container>
 </nav>
