--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -1,1 +1,8 @@
 <p>user-address works!</p>
+<kt-portlet>
+    <kt-portlet-body>
+        <div class="row">
+
+        </div>
+    </kt-portlet-body>
+</kt-portlet>
