--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -1,1 +1,108 @@
-<p>user-personal works!</p>
+<kt-portlet>
+    <kt-portlet-body>
+        <div class="container">
+            <form action="">
+                <div class="row justify-content-center kt-margin-t-30">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-2 text-right">
+                                <img src="../../../../../../assets/media/users/100_5.jpg" height="100" width="100"
+                                    alt="" />
+                            </div>
+                            <div class="col-3 align-self-center">
+                                <input type="file" #file class="d-none" />
+                                <label (click)="file.click()" class="kt-pointer text-primary">Change Profile
+                                    Picture</label>
+                            </div>
+                        </div>
+                        <div class="row kt-margin-t-20">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="offset-1 col-3">
+                                        <label class="font-weight-bold text-color">Mobile</label>
+                                    </div>
+                                    <div class="col-7">
+                                        <input type="text" class="form-control" numbersOnly
+                                            placeholder="Mobile Number" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-3 offset-1">
+                                        <label class="font-weight-bold text-color">Martial Status</label>
+                                    </div>
+                                    <div class="col-7">
+                                        <select name="" id="" class="form-control" placeholder="">
+                                            <option [selected]="true" [disabled]="true">Select Status</option>
+                                            <option [value]="1">Married</option>
+                                            <option [value]="2">Single</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row kt-margin-t-20">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-3 offset-1">
+                                        <label class="font-weight-bold text-color">Occupation</label>
+                                    </div>
+                                    <div class="col-7">
+                                        <select name="" id="" class="form-control" placeholder="Select Occupation">
+                                            <option [selected]="true" [disabled]="true">Select Occupation</option>
+                                            <option value=""></option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-3 offset-1">
+                                        <label class="font-weight-bold text-color">Father / Spouse Name</label>
+                                    </div>
+                                    <div class="col-7">
+                                        <input type="text" class="form-control" placeholder="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row kt-margin-t-20">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-3 offset-1">
+                                        <label class="font-weight-bold text-color">Signature</label>
+                                    </div>
+                                    <div class="col-7">
+                                        <div class="input-group mb-3">
+                                            <input type="text" class="form-control" placeholder="Sample.csv"
+                                                aria-label="Recipient's username" aria-describedby="basic-addon2" readonly />
+                                            <div class="input-group-append">
+                                                <span class="input-group-text bg kt-pointer font-weight"
+                                                    id="basic-addon2" (click)="signature.click()">Attach</span>
+                                            </div>
+                                            <input type="file" class="d-none" #signature>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row kt-margin-t-20 kt-margin-b-20">
+                            <div class="col-6">
+                                <div class="col-8 offset-4">
+                                    <img src="../../../../../../assets/media/users/300_10.jpg" alt="" height="150px" width="250px">
+                                    <div class="kt-margin-t-20 text-color font-11">
+                                        (Please verify the detail before moving forward)
+                                    </div>
+                                    <div class="kt-margin-t-20">
+                                        <kt-button [value]="'Next'" [type]="'button'"></kt-button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </kt-portlet-body>
+</kt-portlet>
