font weight change

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
@@ -8,7 +8,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="offset-1 col-3">
-                                        <label class="font-weight-bold text-color">Bank Name</label>
+                                        <label class="font-weight-500 text-color">Bank Name</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" class="form-control" placeholder="">
@@ -20,7 +20,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Branch Name</label>
+                                        <label class="font-weight-500 text-color">Branch Name</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" class="form-control" placeholder="">
@@ -34,7 +34,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">A/C Type</label>
+                                        <label class="font-weight-500 text-color">A/C Type</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" class="form-control" placeholder="">
@@ -46,7 +46,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Father / Spouse Name</label>
+                                        <label class="font-weight-500 text-color">Father / Spouse Name</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" placeholder="Kane Taylor" />
@@ -58,7 +58,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">A/C Holder</label>
+                                        <label class="font-weight-500 text-color">A/C Holder</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" placeholder="xxxx xxxx xx8867" />
@@ -68,7 +68,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">IFSC Code</label>
+                                        <label class="font-weight-500 text-color">IFSC Code</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" placeholder="IFSCXXXX890" />
@@ -80,7 +80,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Upload Passbook Or Statement</label>
+                                        <label class="font-weight-500 text-color">Upload Passbook Or Statement</label>
                                     </div>
                                     <div class="col-7">
                                         <div class="input-group mb-3">
