--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -19,7 +19,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="offset-1 col-3">
-                                        <label class="font-weight-bold text-color">Mobile</label>
+                                        <label class="font-weight-500 text-color">Mobile</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" numbersOnly
@@ -30,7 +30,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Martial Status</label>
+                                        <label class="font-weight-500 text-color">Martial Status</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" class="form-control" placeholder="">
@@ -46,7 +46,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Occupation</label>
+                                        <label class="font-weight-500 text-color">Occupation</label>
                                     </div>
                                     <div class="col-7">
                                         <select name="" id="" class="form-control" placeholder="Select Occupation">
@@ -59,7 +59,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Father / Spouse Name</label>
+                                        <label class="font-weight-500 text-color">Father / Spouse Name</label>
                                     </div>
                                     <div class="col-7">
                                         <input type="text" class="form-control" placeholder="" />
@@ -71,7 +71,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-3 offset-1">
-                                        <label class="font-weight-bold text-color">Signature</label>
+                                        <label class="font-weight-500 text-color">Signature</label>
                                     </div>
                                     <div class="col-7">
                                         <div class="input-group mb-3">
