--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-details/user-details.component.html
@@ -5,7 +5,7 @@
 				<form action="" [formGroup]="userBasicForm">
 					<div class="row kt-padding-t-15">
 						<div class="col-4 align-self-center">
-							<label class="text-color font-weight-bold"
+							<label class="text-color font-weight-500"
 								>Full Name</label
 							>
 						</div>
@@ -60,7 +60,7 @@
 					<div class="row kt-padding-t-15">
 						<!-- Mobile -->
 						<div class="col-4 align-self-center">
-							<label class="text-color font-weight-bold"
+							<label class="text-color font-weight-500"
 								>Mobile Number</label
 							>
 						</div>
@@ -190,7 +190,7 @@
 					<div class="row kt-padding-t-15">
 						<!-- PAN -->
 						<div class="col-4 align-self-center">
-							<label class="text-color font-weight-bold"
+							<label class="text-color font-weight-500"
 								>Pan Number</label
 							>
 						</div>
