--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
@@ -64,11 +64,11 @@
                 </ng-container>
                 <ng-container matColumnDef="state">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>State</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.states.name }}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.state.name }}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>City</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.cities.name }}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.city.name }}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
