user-address- kyc UI complete

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.scss
@@ -1,4 +1,8 @@
 :host {
+	kt-portlet-body {
+		height: 69vh;
+		overflow-y: auto;
+	}
 	.bg {
 		background-color: #454d67 !important;
 		color: rgb(193, 193, 193) !important;
