--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -276,7 +276,7 @@
             </div>
         </div>
         <div class="kt-margin-t-20 kt-margin-b-20">
-            <kt-button [value]="'Next'" [type]="'button'"></kt-button>
+            <kt-button [value]="'Next'" [type]="'button'" (action)="submit()"></kt-button>
         </div>
         <div class="row">
 
