--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/kyc-settings.component.html
@@ -1,5 +1,6 @@
-<nav ngbNav #nav="ngbNav" class="nav-tabs m-0" [ngStyle]="{'border':'0'}">
-    <ng-container ngbNavItem>
+<nav ngbNav #nav="ngbNav" [(activeId)]="active" (navChange)="onNavChange($event)" class="nav-tabs m-0"
+    [ngStyle]="{'border':'0'}">
+    <ng-container [ngbNavItem]="1" [disabled]="disabled[0]">
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
@@ -11,11 +12,11 @@
         </a>
 
         <ng-template ngbNavContent>
-            <kt-user-details></kt-user-details>
+            <kt-user-details (next)=next($event)></kt-user-details>
         </ng-template>
     </ng-container>
 
-    <ng-container ngbNavItem>
+    <ng-container [ngbNavItem]="2" [disabled]="disabled[1]">
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
@@ -27,11 +28,11 @@
         </a>
 
         <ng-template ngbNavContent>
-            <kt-user-address></kt-user-address>
+            <kt-user-address (next)=next($event)></kt-user-address>
         </ng-template>
     </ng-container>
 
-    <ng-container ngbNavItem>
+    <ng-container [ngbNavItem]="3" [disabled]="disabled[2]">
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
@@ -43,11 +44,11 @@
         </a>
 
         <ng-template ngbNavContent>
-            <kt-user-personal></kt-user-personal>
+            <kt-user-personal (next)=next($event)></kt-user-personal>
         </ng-template>
     </ng-container>
 
-    <ng-container ngbNavItem>
+    <ng-container [ngbNavItem]="4" [disabled]="disabled[3]">
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
@@ -59,10 +60,10 @@
         </a>
 
         <ng-template ngbNavContent>
-            <kt-user-banks></kt-user-banks>
+            <kt-user-banks (next)=next($event)></kt-user-banks>
         </ng-template>
     </ng-container>
-    <ng-container ngbNavItem>
+    <ng-container [ngbNavItem]="5" [disabled]="disabled[4]">
         <a ngbNavLink class="tab-link">
             <div>
                 <div class="step-number">
@@ -73,7 +74,7 @@
             </div>
         </a>
         <ng-template ngbNavContent>
-            <kt-user-review></kt-user-review>
+            <kt-user-review (next)=next($event)></kt-user-review>
         </ng-template>
     </ng-container>
 </nav>
