add lead bug fixing, looping kyc forms

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
@@ -1,1 +1,4 @@
 <p>user-review works!</p>
+<div class="kt-margin-t-20 kt-margin-b-20">
+    <kt-button [value]="'Next'" [type]="'button'" (action)="submit()"></kt-button>
+</div>
